--- a/views/play.erb
+++ b/views/play.erb
@@ -1,6 +1,9 @@
 Hello, <%= @name%>!
 
-Rock
-Paper
-Scissors
+<form method="POST" action="/play">
+  <input type="submit" name="tool" value="Rock" />
+  <input type="submit" name="tool" value="Paper" />
+  <input type="submit" name="tool" value="Scissors" />
+  </form>
 
+You chose <%= @tool%>!
