--- a/views/play.erb
+++ b/views/play.erb
@@ -7,3 +7,7 @@ Hello, <%= @name%>!
   </form>
 
 You chose <%= @tool%>!
+
+<div id="computer">
+  Computer chose <%= @computer_tool.to_s.capitalize%>!
+</div>
