Final Core User Story 6(ii)
As a marketeer

So I can play the computer

I want to see if I lost, drew, or won the game

--- a/views/play.erb
+++ b/views/play.erb
@@ -14,4 +14,8 @@ You chose <%= @go.player_tool.to_s.capitalize%>!
 
 <% if @go.win? %>
   You win!
+<% elsif @go.lose? %>
+  You lose!
+<% elsif @go.draw? %>
+  You draw!
 <% end %>
