--- a/views/play.erb
+++ b/views/play.erb
@@ -8,8 +8,8 @@ Hello, <%= @go.player_name%>!
 
 You chose <%= @go.player_tool.to_s.capitalize%>!
 
-<div id="computer">
-  Computer chose <%= @go.computer_tool.to_s.capitalize%>!
+<div id="game">
+  game chose <%= @go.game_tool.to_s.capitalize%>!
 </div>
 
 <% if @go.win? %>
